Mejoras en la página de inicio

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       href="mobile.css"
       media="only screen and (max-width: 768px)"
     />
-    <meta http-equiv="refresh" content="1; url=minijuego/littlegame.html">
+    <meta http-equiv="refresh" content="5; url=minijuego/littlegame.html">
 </head>
 <body>
     <div class="contenedor">
         <div class="mensaje">
-            <h1>Happy Birthday Cecelyn 🌸</h1>
+            <h1>Happy Birthday Cecelyn <span id="flor">🌸</span></h1>
         </div>
-        <p>Redirecting you to a special surprise...</p>
+        <p>Tu regalo está tomando forma... <span id="aparecer">esta casi listo para brillar</span></p>
     </div>
 </body>
 </html>
