--- a/minijuego/littlegame.html
+++ b/minijuego/littlegame.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to the Little Game!</h1>
     <p>Click the button below to start playing.</p>
-    <button onclick="alert('Game Started!')">Start Game</button>    
+    <button onclick="history.back()">Start Game</button>    
 </body>
 </html>
