--- a/minijuego/littlegame.html
+++ b/minijuego/littlegame.html
@@ -27,13 +27,19 @@
             </div>
         </div>
         
-        <div class="globo">
-            <div class="cabezaglobo" id="globo"></div>
-            <div class="nudoglobo"></div>
-            <div class="cintaglobo"></div>
-        </div>    
+        <div class="pantallajuego">
+            <div class="tiempo">
+                Tiempo: <span id="tiempo">30</span>
+            </div>
+            <div class="globo">
+                <div class="cabezaglobo" id="globo"></div>
+                <div class="nudoglobo"></div>
+                <div class="cintaglobo"></div>
+            </div>
+        </div>
         <div id="mensaje">¡El globo explotó! 🎉</div>
     </div>
+
     <script src="main.js"></script>
 </body>
 </html>
