Creando la logica del minijuego de recoger objetos antes de que se acabe el tiempo.

--- a/minijuego/littlegame.html
+++ b/minijuego/littlegame.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         
-        <div class="pantallajuego">
+        <div class="pantallajuego" id="juego">
             <div class="tiempo">
                 Tiempo: <span id="tiempo">30</span>
             </div>
