Animando a explorar el minijuego de globos en la fiesta de cumpleaños de Cecely.

--- a/minijuego/littlegame.html
+++ b/minijuego/littlegame.html
@@ -29,7 +29,7 @@
         
         <div class="pantallajuego" id="juego">
             <div class="tiempo">
-                Tiempo: <span id="tiempo">30</span>
+                Tiempo: <span id="tiempo"></span>
             </div>
             <div class="globo">
                 <div class="cabezaglobo" id="globo"></div>
