agregando Confeti al minijuego

--- a/minijuego/littlegame.html
+++ b/minijuego/littlegame.html
@@ -38,8 +38,9 @@
             </div>
         </div>
         <div id="mensaje">¡El globo explotó! 🎉</div>
+        <canvas id="canvas1"></canvas>
     </div>
 
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
