Creacion del contenido de la carta, ajustes en animaciones y normalización

--- a/carta/carta.html
+++ b/carta/carta.html
@@ -6,15 +6,41 @@
     <link rel="stylesheet" href="carta.css">
     <title>Happy Birthday Cecely</title>
 </head>
-<body>
-    <div class="contededor">
-        <div class="carta">
-            <div class="mensaje">
-                <div class="titulo">Feliz Cumpleaños Cecely!</div>
-                <div class="contenido"></div>
-                <div class="firma"></div>
+<body>  
+    <div class="contenedor">
+        <article class="carta" role="article" aria-label="Tarjeta de cumpleaños para Cecelyn">
+        <section class="mensaje">
+            <h1 class="titulo">
+            <span class="name">Feliz cumpleaños, <strong>Cecelyn</strong></span> 
+            <span class="flower" aria-hidden="true">🌸</span>
+            </h1>
+            <div class="contenido" id="contenido">
+                <p>Hoy celebramos a una persona llena de luz y alegría,</p>
+                <p>con una sonrisa que lo ilumina todo.</p>
+                <p>Que este nuevo año llegue cargado de sueños cumplidos,</p>
+                <p>risas infinitas y momentos para atesorar.</p>
+                <p>Vive cada instante y celebra a lo grande: este día es solo para ti.</p>
             </div>
-        </div>
+            <div class="firma">
+            — Para ti, con mucho cariño... Joel
+            </div>
+        </section>
+        </article>
     </div>
 </body>
 </html>
+
+<!--
+Hoy florece un nuevo capítulo en tu vida.
+Que esté lleno de sueños que se cumplen,
+risas que no se olvidan
+y sorpresas tan grandes como tu sonrisa.
+Disfruta cada instante… este día es todo tuyo. 
+
+Hoy celebramos a una persona llena de luz, alegría
+y una sonrisa que lo ilumina todo.
+Que este nuevo año llegue cargado de sueños cumplidos,
+risas infinitas y momentos que guardes para siempre.
+Vive cada instante y celebra a lo grande,
+porque este día es solo para ti.
+-->
