agregando funcionalidad de escritura progresiva a la carta

--- a/carta/carta.html
+++ b/carta/carta.html
@@ -15,11 +15,11 @@
             <span class="flower" aria-hidden="true">🌸</span>
             </h1>
             <div class="contenido" id="contenido">
-                <p>Hoy celebramos a una persona llena de luz y alegría,</p>
-                <p>con una sonrisa que lo ilumina todo.</p>
-                <p>Que este nuevo año llegue cargado de sueños cumplidos,</p>
-                <p>risas infinitas y momentos para atesorar.</p>
-                <p>Vive cada instante y celebra a lo grande: este día es solo para ti.</p>
+                <p class="tw-line" data-text="Hoy florece un nuevo capítulo en tu vida."></p>
+                <p class="tw-line" data-text="Que esté lleno de sueños que se cumplen,"></p>
+                <p class="tw-line" data-text="risas que no se olvidan"></p>
+                <p class="tw-line" data-text="y sorpresas tan grandes como tu sonrisa."></p>
+                <p class="tw-line accent" data-text="Disfruta cada instante… este día es todo tuyo."></p>
             </div>
             <div class="firma">
             — Para ti, con mucho cariño... Joel
@@ -27,6 +27,7 @@
         </section>
         </article>
     </div>
+    <script type="module" src="escritura.js" defer></script>
 </body>
 </html>
 
