agregando efecto papel arrugado a la carta, y corrigiendo el título para que se vea mejor en móvil. También agregué la fuente Caveat a la normalización para usarla en el mensaje de la carta.

--- a/carta/carta.html
+++ b/carta/carta.html
@@ -8,7 +8,7 @@
 </head>
 <body>  
     <div class="contenedor">
-        <article class="carta" role="article" aria-label="Tarjeta de cumpleaños para Cecelyn">
+        <article class="carta papel" role="article" aria-label="Tarjeta de cumpleaños para Cecelyn">
         <section class="mensaje">
             <h1 class="titulo">
             <span class="name">Feliz cumpleaños, <strong>Cecelyn</strong></span> 
